flicker-solved

--- a/src/components/Map/ThemesDrawer.css
+++ b/src/components/Map/ThemesDrawer.css
@@ -1,10 +1,15 @@
 .marker.deactive{
-    position: relative;
-    transition: .5s;
+    position: absolute;
+
     width: 38px;
     height: 38px;
     background-color: var(--MainColor)
 
     /* transform: translateX(-50%) translateY(-120%); */
 }
-
+.Icons{
+    position: relative;
+    background-color: white;
+    width: fit-content;
+    height: fit-content;
+}
